--- a/index.html
+++ b/index.html
@@ -68,72 +68,39 @@ namespace.
   </div>
 </div>
 </div></div>
-                <div id="content-tag"><div><h1 id="toc0">An Overview of clojure.contrib</h1>
+                <div id="content-tag"><div><h1 id="toc0">An Overview of the Clojure Core API</h1>
 <br />
-The user contributions library, clojure.contrib, is a collection
-of namespaces each of which implements features that we believe may be useful to 
-a large part of the clojure community. 
-<br /><br />
-This library was created by Rich Hickey but has been populated and is maintained by a 
-group of volunteers who are excited about the success of the Clojure language and 
-want to do our part to help it along. The current list of contributors is available 
-on the <a href="http://github.com/richhickey/clojure-contrib/">
-clojure-contrib GitHub source page</a>.
-<br /><br />
-More contributions (and contributors) are welcome. If you wish to contribute, you will need
-to sign a contributor agreement (which allows Clojure and clojure.contrib to proceed
-without entanglements, see <a href="http://clojure.org/contributing">contributing</a>
-for more info). 
-<br /><br />
-The best way to start is to share a project you've written with the google group and gauge
-the interest in adding it to contrib. (Publishing it in an open source form on google code,
-github or some other easy-to-access place in the net will also help.) After general 
-discussion, Rich Hickey makes the final determination about what gets added to 
-clojure.contrib.
-<br /><br />
-Some parts of clojure.contrib may migrate into clojure.core if they prove to be so 
-generally useful that they justify being everywhere. (For example, condp started out
-as an extension in contrib, but was moved to core by popular acclamation.)
-<br /><br />
-The exact role of clojure.contrib and the future of the Clojure environment (standard 
-libraries, dependency models, packaging systems, etc.)
-is the subject of pretty much continuous discussion
-in the clojure google group and in #clojure on freenode. Feel free to join that 
-discussion and help shape the ways Clojure is extended.
-<br /><br />
-Like Clojure itself, clojure.contrib is made available under the 
-<a href="http://opensource.org/licenses/eclipse-1.0.php">Eclipse Public License (EPL)</a>. 
-clojure.contrib is copyright 2008-2009 Rich Hickey and the various contributors.
-<br /><br />
-<h3>Important clojure-contrib resources</h3>
+This is API documentation for the latest committed checkin of the clojure core.
+<h3>Important clojure resources</h3>
 <ul>
-  <li>The official source code for clojure-contrib is on the
-    <a href="http://github.com/richhickey/clojure-contrib/">
-      clojure-contrib GitHub source page
+  <li>The official source code for clojure is on the
+    <a href="http://github.com/richhickey/clojure/">hi
+      clojure GitHub source page
     </a>.
   </li>
-  <li>Issues and other information for clojure-contrib are maintained in the
-    <a href="http://www.assembla.com/spaces/dashboard/index/clojure-contrib">
-      clojure-contrib Assembla space
+  <li>Issues and other information for clojure are maintained in the
+    <a href="http://www.assembla.com/spaces/dashboard/index/clojure">
+      clojure Assembla space
     </a>.
   </li>
-  <li>This documentation is maintained in the gh-pages branch of clojure-contrib
+  <li>This documentation is maintained in the gh-pages branch of clojure
     on GitHub and is always available online 
-    <a href="http://richhickey.github.com/clojure-contrib">
-      GitHub pages for clojure-contrib
-    </a>. If you wish to have a version for off-line use you can use the download 
+    <a href="http://tomfaulhaber.github.com/clojure">
+      GitHub pages for clojure
+    </a>. (Currently stored in a fork on Tom Faulhaber's GitHub account.)
+    If you wish to have a version for off-line use you can use the download 
     button on the 
-    <a href="http://github.com/richhickey/clojure-contrib/tree/gh-pages">
+    <a href="http://github.com/tomfaulhaber/clojure/tree/gh-pages">
       gh-pages branch page at GitHub
     </a>.
   </li>
-  <li>Issues related to clojure-contrib and the various pieces of functionality
+  <li>Issues related to clojure and the various pieces of functionality
     within it are discussed in the
     <a href="http://groups.google.com/group/clojure">
       Clojure Google group
     </a>.
   </li>
-  <li>Discussions among clojure-contrib developers take place in the
+  <li>Discussions among clojure developers take place in the
     <a href="http://groups.google.com/group/clojure-dev">
       Clojure Dev Google group
     </a>.
@@ -144,7 +111,7 @@ clojure.contrib is copyright 2008-2009 Rich Hickey and the various contributors.
   <br />
   <hr />
   <h2 id="clojure.core">clojure.core</h2>
-  by <span id="author">unknown author</span><br />
+  <!-- by <span id="author">Author here</span><br /> -->
   <a href="clojure.core-api.html" id="api-link">Detailed API documentation</a><br />
   <pre id="namespace-docstr">Fundamental library of the Clojure language</pre>
   
@@ -155,7 +122,7 @@ clojure.contrib is copyright 2008-2009 Rich Hickey and the various contributors.
   <br />
   <hr />
   <h2 id="clojure.main">clojure.main</h2>
-  by <span id="author">unknown author</span><br />
+  <!-- by <span id="author">Author here</span><br /> -->
   <a href="clojure.main-api.html" id="api-link">Detailed API documentation</a><br />
   <pre id="namespace-docstr"></pre>
   
@@ -166,7 +133,7 @@ clojure.contrib is copyright 2008-2009 Rich Hickey and the various contributors.
   <br />
   <hr />
   <h2 id="clojure.set">clojure.set</h2>
-  by <span id="author">unknown author</span><br />
+  <!-- by <span id="author">Author here</span><br /> -->
   <a href="clojure.set-api.html" id="api-link">Detailed API documentation</a><br />
   <pre id="namespace-docstr"></pre>
   
@@ -177,7 +144,7 @@ clojure.contrib is copyright 2008-2009 Rich Hickey and the various contributors.
   <br />
   <hr />
   <h2 id="clojure.xml">clojure.xml</h2>
-  by <span id="author">unknown author</span><br />
+  <!-- by <span id="author">Author here</span><br /> -->
   <a href="clojure.xml-api.html" id="api-link">Detailed API documentation</a><br />
   <pre id="namespace-docstr"></pre>
   
@@ -188,7 +155,7 @@ clojure.contrib is copyright 2008-2009 Rich Hickey and the various contributors.
   <br />
   <hr />
   <h2 id="clojure.zip">clojure.zip</h2>
-  by <span id="author">unknown author</span><br />
+  <!-- by <span id="author">Author here</span><br /> -->
   <a href="clojure.zip-api.html" id="api-link">Detailed API documentation</a><br />
   <pre id="namespace-docstr"></pre>
   
