--- a/clojure.set-api.html
+++ b/clojure.set-api.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>clojure.set API reference (clojure.contrib)</title>
+    <title>clojure.set API reference (Clojure)</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <![endif]-->
   </head>
 <!--
-This document was auto-generated from the clojure.contrib source by contrib-autodoc.
+This document was auto-generated from the source by the clojure autodoc system.
 To report errors or ask questions about the overall documentation structure, formatting,
 etc., contact Tom Faulhaber (google mail name: tomfaulhaber).
 For errors in the documentation of a particular namespace, contact the author of that
@@ -25,7 +25,7 @@ namespace.
     <div id="AllContentContainer">
       <div id="Header">
 	<a id="Logo" href="index.html"><img alt="Clojure" height="100" width="100" src="static/clojure-icon.gif" /></a>
-	<h1><a title="Clojure-contrib" href="index.html">Clojure-contrib</a></h1>
+	<h1><a title="page header title" id="page-header" href="index.html">Clojure</a></h1>
       </div>
       <div id="leftcolumn"><div><div style="text-align: center;"></div>
 <div class="menu">
@@ -34,7 +34,7 @@ namespace.
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
@@ -93,8 +93,7 @@ by <span id="author">Unknown</span><br />
        (difference s1 s2 &amp; sets)
 </pre>
   <pre id="var-docstr">Return a set that is the first set without elements of the remaining sets</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L44" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L44" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -104,8 +103,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L44" id="var-sourc
 </pre>
   <pre id="var-docstr">Returns a map of the distinct values of ks in the xrel mapped to a
 set of the maps in xrel with the corresponding values of ks.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L85" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L85" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -116,8 +114,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L85" id="var-sourc
        (intersection s1 s2 &amp; sets)
 </pre>
   <pre id="var-docstr">Return a set that is the intersection of the input sets</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L29" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L29" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -129,8 +126,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L29" id="var-sourc
   <pre id="var-docstr">When passed 2 rels, returns the rel corresponding to the natural
 join. When passed an additional keymap, joins on the corresponding
 keys.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L99" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L99" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -139,8 +135,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L99" id="var-sourc
   <pre id="var-usage">Usage: (map-invert m)
 </pre>
   <pre id="var-docstr">Returns the map with the vals mapped to the keys.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L95" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L95" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -149,8 +144,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L95" id="var-sourc
   <pre id="var-usage">Usage: (project xrel ks)
 </pre>
   <pre id="var-docstr">Returns a rel of the elements of xrel with only the keys in ks</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L65" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L65" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -159,8 +153,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L65" id="var-sourc
   <pre id="var-usage">Usage: (rename xrel kmap)
 </pre>
   <pre id="var-docstr">Returns a rel of the maps in xrel with the keys in kmap renamed to the vals in kmap</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L80" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L80" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -169,8 +162,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L80" id="var-sourc
   <pre id="var-usage">Usage: (rename-keys map kmap)
 </pre>
   <pre id="var-docstr">Returns the map with the keys in kmap renamed to the vals in kmap</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L70" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L70" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -179,8 +171,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L70" id="var-sourc
   <pre id="var-usage">Usage: (select pred xset)
 </pre>
   <pre id="var-docstr">Returns a set of the elements for which pred is true</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L59" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L59" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -192,8 +183,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L59" id="var-sourc
        (union s1 s2 &amp; sets)
 </pre>
   <pre id="var-docstr">Return a set that is the union of the input sets</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/set.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/set.clj#L17" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L17" id="var-source">Source</a>
 </div>
 
 
@@ -203,9 +193,7 @@ Use '--' to separate paths from revisions/src/clojure/set.clj#L17" id="var-sourc
           </div>
 	</div>
 	<div id="foot">
-	  <div style="text-align: center;">
-            Copyright 2008-2009 Rich Hickey and the various contributors
-          </div>
+	  <div style="text-align: center;" id="copyright">Copyright 2007-2009 by Rich Hickey</div>
 	</div>
       </div>
       <div id="DesignedBy">Logo &amp; site design by <a title="Visit Tom Hickey's website." href="http://www.tomhickey.com">Tom Hickey</a>.<br />
