--- a/api-index.html
+++ b/api-index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Clojure Contrib - Index</title>
+    <title>Clojure - Index</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <![endif]-->
   </head>
 <!--
-This document was auto-generated from the clojure.contrib source by contrib-autodoc.
+This document was auto-generated from the source by the clojure autodoc system.
 To report errors or ask questions about the overall documentation structure, formatting,
 etc., contact Tom Faulhaber (google mail name: tomfaulhaber).
 For errors in the documentation of a particular namespace, contact the author of that
@@ -25,7 +25,7 @@ namespace.
     <div id="AllContentContainer">
       <div id="Header">
 	<a id="Logo" href="index.html"><img alt="Clojure" height="100" width="100" src="static/clojure-icon.gif" /></a>
-	<h1><a title="Clojure-contrib" href="index.html">Clojure-contrib</a></h1>
+	<h1><a title="page header title" id="page-header" href="index.html">Clojure</a></h1>
       </div>
       <div id="leftcolumn"><div><div style="text-align: center;"></div>
 <div class="menu">
@@ -34,7 +34,7 @@ namespace.
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
@@ -224,6 +224,7 @@ Shortcuts:<br />
   <pre>
 <span id="section-content"> <a href="clojure.core-api.html#*e">*e</a><span id="line-content">                           var           clojure.core       bound in a repl thread to the most recent exceptio...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#*err*">*err*</a><span id="line-content">                        var           clojure.core       A java.io.Writer object representing standard erro...
+</span></span><span id="section-content"> <a href="clojure.stacktrace-api.html#e">e</a><span id="line-content">                            function      clojure.stacktrace REPL utility.  Prints a brief stack trace for the ...
 </span></span><span id="section-content"> <a href="clojure.zip-api.html#edit">edit</a><span id="line-content">                         function      clojure.zip        Replaces the node at this loc with the value of (f...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#empty">empty</a><span id="line-content">                        function      clojure.core       Returns an empty collection of the same category a...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#empty?">empty?</a><span id="line-content">                       function      clojure.core       Returns true if coll has no items - same as (not (...
@@ -453,8 +454,12 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="clojure.core-api.html#prefers">prefers</a><span id="line-content">                      function      clojure.core       Given a multimethod, returns a map of preferred va...
 </span></span><span id="section-content"> <a href="clojure.zip-api.html#prev">prev</a><span id="line-content">                         function      clojure.zip        Moves to the previous loc in the hierarchy, depth-...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#print">print</a><span id="line-content">                        function      clojure.core       Prints the object(s) to the output stream that is ...
+</span></span><span id="section-content"> <a href="clojure.stacktrace-api.html#print-cause-trace">print-cause-trace</a><span id="line-content">            function      clojure.stacktrace Like print-stack-trace but prints chained exceptio...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#print-namespace-doc">print-namespace-doc</a><span id="line-content">          function      clojure.core       Print the documentation string of a Namespace..
+</span></span><span id="section-content"> <a href="clojure.stacktrace-api.html#print-stack-trace">print-stack-trace</a><span id="line-content">            function      clojure.stacktrace Prints a Clojure-oriented stack trace of tr, a Thr...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#print-str">print-str</a><span id="line-content">                    function      clojure.core       print to a string, returning it.
+</span></span><span id="section-content"> <a href="clojure.stacktrace-api.html#print-throwable">print-throwable</a><span id="line-content">              function      clojure.stacktrace Prints the class and message of a Throwable..
+</span></span><span id="section-content"> <a href="clojure.stacktrace-api.html#print-trace-element">print-trace-element</a><span id="line-content">          function      clojure.stacktrace Prints a Clojure-oriented view of one element in a...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#printf">printf</a><span id="line-content">                       function      clojure.core       Prints formatted output, as per format.
 </span></span><span id="section-content"> <a href="clojure.core-api.html#println">println</a><span id="line-content">                      function      clojure.core       Same as print followed by (newline).
 </span></span><span id="section-content"> <a href="clojure.core-api.html#println-str">println-str</a><span id="line-content">                  function      clojure.core       println to a string, returning it.
@@ -531,6 +536,7 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="clojure.zip-api.html#rightmost">rightmost</a><span id="line-content">                    function      clojure.zip        Returns the loc of the rightmost sibling of the no...
 </span></span><span id="section-content"> <a href="clojure.zip-api.html#rights">rights</a><span id="line-content">                       function      clojure.zip        Returns a seq of the right siblings of this loc.
 </span></span><span id="section-content"> <a href="clojure.zip-api.html#root">root</a><span id="line-content">                         function      clojure.zip        zips all the way up and returns the root node, ref...
+</span></span><span id="section-content"> <a href="clojure.stacktrace-api.html#root-cause">root-cause</a><span id="line-content">                   function      clojure.stacktrace Returns the last 'cause' Throwable in a chain of T...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#rseq">rseq</a><span id="line-content">                         function      clojure.core       Returns, in constant time, a seq of the items in r...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#rsubseq">rsubseq</a><span id="line-content">                      function      clojure.core       sc must be a sorted collection, test(s) one of &lt;, ...
 </span></span></pre>
@@ -562,6 +568,7 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="clojure.core-api.html#sorted-map">sorted-map</a><span id="line-content">                   function      clojure.core       keyval =&gt; key val Returns a new sorted map with su...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#sorted-map-by">sorted-map-by</a><span id="line-content">                function      clojure.core       keyval =&gt; key val Returns a new sorted map with su...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#sorted-set">sorted-set</a><span id="line-content">                   function      clojure.core       Returns a new sorted set with supplied keys..
+</span></span><span id="section-content"> <a href="clojure.core-api.html#sorted-set-by">sorted-set-by</a><span id="line-content">                function      clojure.core       Returns a new sorted set with supplied keys, using...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#sorted?">sorted?</a><span id="line-content">                      function      clojure.core       Returns true if coll implements Sorted.
 </span></span><span id="section-content"> <a href="clojure.core-api.html#special-form-anchor">special-form-anchor</a><span id="line-content">          function      clojure.core       Returns the anchor tag on http://clojure.org/speci...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#special-symbol?">special-symbol?</a><span id="line-content">              function      clojure.core       Returns true if s names a special form.
@@ -586,6 +593,7 @@ Shortcuts:<br />
   <h2><span id="section-head">T</span></h2>
   <pre>
 <span id="section-content"> <a href="clojure.core-api.html#take">take</a><span id="line-content">                         function      clojure.core       Returns a lazy sequence of the first n items in co...
+</span></span><span id="section-content"> <a href="clojure.core-api.html#take-last">take-last</a><span id="line-content">                    function      clojure.core       Returns a seq of the last n items in coll.  Depend...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#take-nth">take-nth</a><span id="line-content">                     function      clojure.core       Returns a lazy seq of every nth item in coll..
 </span></span><span id="section-content"> <a href="clojure.core-api.html#take-while">take-while</a><span id="line-content">                   function      clojure.core       Returns a lazy sequence of successive items from c...
 </span></span><span id="section-content"> <a href="clojure.core-api.html#test">test</a><span id="line-content">                         function      clojure.core       test [v] finds fn at key :test in var metadata and...
@@ -692,9 +700,7 @@ Shortcuts:<br />
           </div>
 	</div>
 	<div id="foot">
-	  <div style="text-align: center;">
-            Copyright 2008-2009 Rich Hickey and the various contributors
-          </div>
+	  <div style="text-align: center;" id="copyright">Copyright 2007-2009 by Rich Hickey</div>
 	</div>
       </div>
       <div id="DesignedBy">Logo &amp; site design by <a title="Visit Tom Hickey's website." href="http://www.tomhickey.com">Tom Hickey</a>.<br />
