--- a/clojure.main-api.html
+++ b/clojure.main-api.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>clojure.main API reference (clojure.contrib)</title>
+    <title>clojure.main API reference (Clojure)</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <![endif]-->
   </head>
 <!--
-This document was auto-generated from the clojure.contrib source by contrib-autodoc.
+This document was auto-generated from the source by the clojure autodoc system.
 To report errors or ask questions about the overall documentation structure, formatting,
 etc., contact Tom Faulhaber (google mail name: tomfaulhaber).
 For errors in the documentation of a particular namespace, contact the author of that
@@ -25,7 +25,7 @@ namespace.
     <div id="AllContentContainer">
       <div id="Header">
 	<a id="Logo" href="index.html"><img alt="Clojure" height="100" width="100" src="static/clojure-icon.gif" /></a>
-	<h1><a title="Clojure-contrib" href="index.html">Clojure-contrib</a></h1>
+	<h1><a title="page header title" id="page-header" href="index.html">Clojure</a></h1>
       </div>
       <div id="leftcolumn"><div><div style="text-align: center;"></div>
 <div class="menu">
@@ -34,7 +34,7 @@ namespace.
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
@@ -92,8 +92,7 @@ by <span id="author">Unknown</span><br />
 </pre>
   <pre id="var-docstr">Loads Clojure source from a file or resource given its path. Paths
 beginning with @ or @/ are considered relative to classpath.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L203" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L203" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -130,8 +129,7 @@ suppresses the usual repl greeting message: "Clojure ~(clojure-version)".
 
 Paths may be absolute or relative in the filesystem or relative to
 classpath. Classpath-relative paths have prefix of @ or @/</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L301" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L301" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -181,8 +179,7 @@ are sequential keyword-value pairs. Available options and their defaults:
    - :caught, function of one argument, a throwable, called when
      read, eval, or print throws an exception or error
      default: repl-caught</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L115" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L115" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -191,8 +188,7 @@ Use '--' to separate paths from revisions/src/clojure/main.clj#L115" id="var-sou
   <pre id="var-usage">Usage: (repl-caught e)
 </pre>
   <pre id="var-docstr">Default :caught hook for repl</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L110" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L110" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -202,8 +198,7 @@ Use '--' to separate paths from revisions/src/clojure/main.clj#L110" id="var-sou
 </pre>
   <pre id="var-docstr">Returns CompilerExceptions in tact, but only the root cause of other
 throwables</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L102" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L102" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -212,8 +207,7 @@ Use '--' to separate paths from revisions/src/clojure/main.clj#L102" id="var-sou
   <pre id="var-usage">Usage: (repl-prompt)
 </pre>
   <pre id="var-docstr">Default :prompt hook for repl</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L38" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L38" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -231,8 +225,7 @@ supporting .unread and collapsing all of CR, LF, and CRLF into a single
     - reads an object from the input stream, then
       - skips the next input character if it's end of line, then
       - returns the object.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L75" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L75" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -246,8 +239,7 @@ to indicate the relative location of the next character on s. The stream
 must either be an instance of LineNumberingPushbackReader or duplicate
 its behavior of both supporting .unread and collapsing all of CR, LF, and
 CRLF to a single \newline.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L43" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L43" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -263,8 +255,7 @@ character of lookahead is available. The stream must either be an
 instance of LineNumberingPushbackReader or duplicate its behavior of both
 supporting .unread and collapsing all of CR, LF, and CRLF to a single
 \newline.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L57" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L57" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -276,8 +267,7 @@ Use '--' to separate paths from revisions/src/clojure/main.clj#L57" id="var-sour
 that often need to be set!: *ns* *warn-on-reflection* *math-context*
 *print-meta* *print-length* *print-level* *compile-path*
 *command-line-args* *1 *2 *3 *e</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/main.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/main.clj#L17" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/main.clj#L17" id="var-source">Source</a>
 </div>
 
 
@@ -287,9 +277,7 @@ Use '--' to separate paths from revisions/src/clojure/main.clj#L17" id="var-sour
           </div>
 	</div>
 	<div id="foot">
-	  <div style="text-align: center;">
-            Copyright 2008-2009 Rich Hickey and the various contributors
-          </div>
+	  <div style="text-align: center;" id="copyright">Copyright 2007-2009 by Rich Hickey</div>
 	</div>
       </div>
       <div id="DesignedBy">Logo &amp; site design by <a title="Visit Tom Hickey's website." href="http://www.tomhickey.com">Tom Hickey</a>.<br />
