--- a/clojure.xml-api.html
+++ b/clojure.xml-api.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>clojure.xml API reference (clojure.contrib)</title>
+    <title>clojure.xml API reference (Clojure)</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <![endif]-->
   </head>
 <!--
-This document was auto-generated from the clojure.contrib source by contrib-autodoc.
+This document was auto-generated from the source by the clojure autodoc system.
 To report errors or ask questions about the overall documentation structure, formatting,
 etc., contact Tom Faulhaber (google mail name: tomfaulhaber).
 For errors in the documentation of a particular namespace, contact the author of that
@@ -25,7 +25,7 @@ namespace.
     <div id="AllContentContainer">
       <div id="Header">
 	<a id="Logo" href="index.html"><img alt="Clojure" height="100" width="100" src="static/clojure-icon.gif" /></a>
-	<h1><a title="Clojure-contrib" href="index.html">Clojure-contrib</a></h1>
+	<h1><a title="page header title" id="page-header" href="index.html">Clojure</a></h1>
       </div>
       <div id="leftcolumn"><div><div style="text-align: center;"></div>
 <div class="menu">
@@ -34,7 +34,7 @@ namespace.
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
@@ -79,8 +79,7 @@ which has the keys :tag, :attrs, and :content. and accessor fns tag,
 attrs, and content. Other parsers can be supplied by passing
 startparse, a fn taking a source and a ContentHandler and returning
 a parser</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fatal: ambiguous argument 'clojure/xml.clj': unknown revision or path not in the working tree.
-Use '--' to separate paths from revisions/src/clojure/xml.clj#L76" id="var-source">Source</a>
+  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/xml.clj#L76" id="var-source">Source</a>
 </div>
 
 
@@ -90,9 +89,7 @@ Use '--' to separate paths from revisions/src/clojure/xml.clj#L76" id="var-sourc
           </div>
 	</div>
 	<div id="foot">
-	  <div style="text-align: center;">
-            Copyright 2008-2009 Rich Hickey and the various contributors
-          </div>
+	  <div style="text-align: center;" id="copyright">Copyright 2007-2009 by Rich Hickey</div>
 	</div>
       </div>
       <div id="DesignedBy">Logo &amp; site design by <a title="Visit Tom Hickey's website." href="http://www.tomhickey.com">Tom Hickey</a>.<br />
