--- a/clojure.parallel-api.html
+++ b/clojure.parallel-api.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>clojure.xml API reference (Clojure)</title>
+    <title>clojure.parallel API reference (Clojure)</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -47,40 +47,23 @@ namespace.
   <h1 class="nopad">Table of Contents</h1>
   <div style="margin-left: 1em;" class="toc-section">
     <a href="#toc0">Overview</a>
-    <div style="margin-left: 1em;" class="toc-entry">
-      <a href="#clojure.xml/parse">parse</a>
-    </div>
+    
     <br />
   </div>
 </div>
 </div></div>
-                <div id="content-tag"><div><h1 id="overview">API for <span id="namespace-name">clojure.xml</span></h1>
+                <div id="content-tag"><div><h1 id="overview">API for <span id="namespace-name">clojure.parallel</span></h1>
 by <span id="author">Unknown</span><br />
 <br />Usage:
 <pre>
 (ns your-namespace
-  (:require <span id="long-name">clojure.xml</span>))
+  (:require <span id="long-name">clojure.parallel</span>))
 </pre><pre>
 </pre><h2>Overview</h2>
 <pre id="namespace-docstr"></pre>
 <br />
 <h2>Public Variables and Functions</h2>
-<div id="var-entry">
-  <br />
-  <hr />
-  <h2 id="clojure.xml/parse">parse</h2>
-  <span id="var-type">function</span><br />
-  <pre id="var-usage">Usage: (parse s)
-       (parse s startparse)
-</pre>
-  <pre id="var-docstr">Parses and loads the source s, which can be a File, InputStream or
-String naming a URI. Returns a tree of the xml/element struct-map,
-which has the keys :tag, :attrs, and :content. and accessor fns tag,
-attrs, and content. Other parsers can be supplied by passing
-startparse, a fn taking a source and a ContentHandler and returning
-a parser</pre>
-  <a href="http://github.com/richhickey/clojure/blob/040f083efc16dd830a4508a35a04465e3e5677d3/src/clj/clojure/xml.clj#L76" id="var-source">Source</a>
-</div>
+
 
 
 </div></div>
