Updated as far as we can go since the latest HEAD breaks enlive

--- a/clojure.stacktrace-api.html
+++ b/clojure.stacktrace-api.html
@@ -65,14 +65,14 @@ namespace.
 </div>
 </div></div>
                 <div id="content-tag"><div><h1 id="overview">API for <span id="namespace-name">clojure.stacktrace</span></h1>
-by <span id="author">Stuart Sierra</span><br />
+by <span id="author">Unknown</span><br />
 <br />Usage:
 <pre>
 (ns your-namespace
   (:require <span id="long-name">clojure.stacktrace</span>))
 </pre><pre>
 </pre><h2>Overview</h2>
-<pre id="namespace-docstr">Print Clojure-centric stack traces</pre>
+<pre id="namespace-docstr"></pre>
 <br />
 <h2>Public Variables and Functions</h2>
 <div id="var-entry">
