--- a/clojure.inspector-api.html
+++ b/clojure.inspector-api.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>clojure.inspector API reference (Clojure)</title>
+    <title>clojure.inspector API reference (Clojure (Tom's Fork))</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -25,25 +25,31 @@ namespace.
     <div id="AllContentContainer">
       <div id="Header">
 	<a id="Logo" href="index.html"><img alt="Clojure" height="100" width="100" src="static/clojure-icon.gif" /></a>
-	<h1><a title="page header title" id="page-header" href="index.html">Clojure</a></h1>
+	<h1><a title="page header title" id="page-header" href="index.html">Clojure Core API Reference</a></h1>
       </div>
-      <div id="leftcolumn"><div><div style="text-align: center;"></div>
+      <div id="leftcolumn"><div style="text-align: center;"></div>
 <div class="menu">
   <div class="WikiCustomNav WikiElement wiki">
+    <div class="BranchTOC">
+      <a class="wiki_link" href="#">Branches</a>
+      <ul id="left-sidebar-branch-list">
+        <li><a href="index.html" class="wiki_link">pprint</a></li>
+      </ul>
+    </div>
     <a class="wiki_link" href="index.html">Overview</a><br />
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.template-api.html" class="wiki_link">clojure.template</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.walk-api.html" class="wiki_link">clojure.walk</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.pprint-api.html" class="wiki_link">clojure.pprint</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.template-api.html" class="wiki_link">clojure.template</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.walk-api.html" class="wiki_link">clojure.walk</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
-</div></div>
+</div>
       <div id="rightcolumn">
 	<div id="Content">
 	  <div class="contentBox"><div class="innerContentBox">
               <div id="content_view" class="wiki wikiPage">
-                <div id="right-sidebar"><div><div id="toc">
+                <div id="right-sidebar"><div id="toc">
   <h1 class="nopad">Table of Contents</h1>
   <div style="margin-left: 1em;" class="toc-section">
     <a href="#toc0">Overview</a>
@@ -57,16 +63,19 @@ namespace.
     <br />
   </div>
 </div>
-</div></div>
-                <div id="content-tag"><div><h1 id="overview">API for <span id="namespace-name">clojure.inspector</span></h1>
-by <span id="author">Unknown</span><br />
+</div>
+                <div id="content-tag"><h1 id="overview">API for <span id="namespace-name">clojure.inspector</span>
+  <span id="branch-name">(pprint branch)</span></h1>
+by <span id="author">Rich Hickey</span><br />
 <br />Usage:
 <pre>
 (ns your-namespace
   (:require <span id="long-name">clojure.inspector</span>))
 </pre><pre>
 </pre><h2>Overview</h2>
-<pre id="namespace-docstr"></pre>
+<pre id="namespace-docstr">Graphical object inspector for Clojure data structures.</pre>
+
+
 <br />
 <h2>Public Variables and Functions</h2>
 <div id="var-entry">
@@ -77,7 +86,9 @@ by <span id="author">Unknown</span><br />
   <pre id="var-usage">Usage: (inspect x)
 </pre>
   <pre id="var-docstr">creates a graphical (Swing) inspector on the supplied object</pre>
-  <a href="http://github.com/richhickey/clojure/blob/cad4fcf1afe7977b83c3ee2f40521eb38aa33e10/src/clj/clojure/inspector.clj#L146" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/inspector.clj#L148" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -88,7 +99,9 @@ by <span id="author">Unknown</span><br />
   <pre id="var-docstr">creates a graphical (Swing) inspector on the supplied regular
 data, which must be a sequential data structure of data structures
 of equal length</pre>
-  <a href="http://github.com/richhickey/clojure/blob/cad4fcf1afe7977b83c3ee2f40521eb38aa33e10/src/clj/clojure/inspector.clj#L93" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/inspector.clj#L95" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -97,11 +110,13 @@ of equal length</pre>
   <pre id="var-usage">Usage: (inspect-tree data)
 </pre>
   <pre id="var-docstr">creates a graphical (Swing) inspector on the supplied hierarchical data</pre>
-  <a href="http://github.com/richhickey/clojure/blob/cad4fcf1afe7977b83c3ee2f40521eb38aa33e10/src/clj/clojure/inspector.clj#L85" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/inspector.clj#L87" id="var-source">Source</a>
 </div>
 
 
-</div></div>
+</div>
               </div>
             </div>
           </div>
