--- a/clojure.main-api.html
+++ b/clojure.main-api.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>clojure.main API reference (Clojure)</title>
+    <title>clojure.main API reference (Clojure (Tom's Fork))</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -25,25 +25,31 @@ namespace.
     <div id="AllContentContainer">
       <div id="Header">
 	<a id="Logo" href="index.html"><img alt="Clojure" height="100" width="100" src="static/clojure-icon.gif" /></a>
-	<h1><a title="page header title" id="page-header" href="index.html">Clojure</a></h1>
+	<h1><a title="page header title" id="page-header" href="index.html">Clojure Core API Reference</a></h1>
       </div>
-      <div id="leftcolumn"><div><div style="text-align: center;"></div>
+      <div id="leftcolumn"><div style="text-align: center;"></div>
 <div class="menu">
   <div class="WikiCustomNav WikiElement wiki">
+    <div class="BranchTOC">
+      <a class="wiki_link" href="#">Branches</a>
+      <ul id="left-sidebar-branch-list">
+        <li><a href="index.html" class="wiki_link">pprint</a></li>
+      </ul>
+    </div>
     <a class="wiki_link" href="index.html">Overview</a><br />
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.template-api.html" class="wiki_link">clojure.template</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.walk-api.html" class="wiki_link">clojure.walk</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.pprint-api.html" class="wiki_link">clojure.pprint</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.template-api.html" class="wiki_link">clojure.template</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.walk-api.html" class="wiki_link">clojure.walk</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
-</div></div>
+</div>
       <div id="rightcolumn">
 	<div id="Content">
 	  <div class="contentBox"><div class="innerContentBox">
               <div id="content_view" class="wiki wikiPage">
-                <div id="right-sidebar"><div><div id="toc">
+                <div id="right-sidebar"><div id="toc">
   <h1 class="nopad">Table of Contents</h1>
   <div style="margin-left: 1em;" class="toc-section">
     <a href="#toc0">Overview</a>
@@ -71,8 +77,9 @@ namespace.
     <br />
   </div>
 </div>
-</div></div>
-                <div id="content-tag"><div><h1 id="overview">API for <span id="namespace-name">clojure.main</span></h1>
+</div>
+                <div id="content-tag"><h1 id="overview">API for <span id="namespace-name">clojure.main</span>
+  <span id="branch-name">(pprint branch)</span></h1>
 by <span id="author">Unknown</span><br />
 <br />Usage:
 <pre>
@@ -81,6 +88,8 @@ by <span id="author">Unknown</span><br />
 </pre><pre>
 </pre><h2>Overview</h2>
 <pre id="namespace-docstr"></pre>
+
+
 <br />
 <h2>Public Variables and Functions</h2>
 <div id="var-entry">
@@ -92,7 +101,9 @@ by <span id="author">Unknown</span><br />
 </pre>
   <pre id="var-docstr">Loads Clojure source from a file or resource given its path. Paths
 beginning with @ or @/ are considered relative to classpath.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L204" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L206" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -129,7 +140,9 @@ suppresses the usual repl greeting message: "Clojure ~(clojure-version)".
 
 Paths may be absolute or relative in the filesystem or relative to
 classpath. Classpath-relative paths have prefix of @ or @/</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L302" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L310" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -179,7 +192,9 @@ are sequential keyword-value pairs. Available options and their defaults:
    - :caught, function of one argument, a throwable, called when
      read, eval, or print throws an exception or error
      default: repl-caught</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L116" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L118" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -188,7 +203,9 @@ are sequential keyword-value pairs. Available options and their defaults:
   <pre id="var-usage">Usage: (repl-caught e)
 </pre>
   <pre id="var-docstr">Default :caught hook for repl</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L111" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L113" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -198,7 +215,9 @@ are sequential keyword-value pairs. Available options and their defaults:
 </pre>
   <pre id="var-docstr">Returns CompilerExceptions in tact, but only the root cause of other
 throwables</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L103" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L105" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -207,7 +226,9 @@ throwables</pre>
   <pre id="var-usage">Usage: (repl-prompt)
 </pre>
   <pre id="var-docstr">Default :prompt hook for repl</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L39" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L41" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -225,7 +246,9 @@ supporting .unread and collapsing all of CR, LF, and CRLF into a single
     - reads an object from the input stream, then
       - skips the next input character if it's end of line, then
       - returns the object.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L76" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L78" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -239,7 +262,9 @@ to indicate the relative location of the next character on s. The stream
 must either be an instance of LineNumberingPushbackReader or duplicate
 its behavior of both supporting .unread and collapsing all of CR, LF, and
 CRLF to a single \newline.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L44" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L46" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -255,7 +280,9 @@ character of lookahead is available. The stream must either be an
 instance of LineNumberingPushbackReader or duplicate its behavior of both
 supporting .unread and collapsing all of CR, LF, and CRLF to a single
 \newline.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L58" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L60" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -267,11 +294,13 @@ supporting .unread and collapsing all of CR, LF, and CRLF to a single
 that often need to be set!: *ns* *warn-on-reflection* *math-context*
 *print-meta* *print-length* *print-level* *compile-path*
 *command-line-args* *1 *2 *3 *e</pre>
-  <a href="http://github.com/richhickey/clojure/blob/fbacc4a5751fa5c15baa599b5a058cd81b05a247/src/clj/clojure/main.clj#L18" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/main.clj#L20" id="var-source">Source</a>
 </div>
 
 
-</div></div>
+</div>
               </div>
             </div>
           </div>
