--- a/clojure.set-api.html
+++ b/clojure.set-api.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>clojure.set API reference (Clojure)</title>
+    <title>clojure.set API reference (Clojure (Tom's Fork))</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -25,25 +25,31 @@ namespace.
     <div id="AllContentContainer">
       <div id="Header">
 	<a id="Logo" href="index.html"><img alt="Clojure" height="100" width="100" src="static/clojure-icon.gif" /></a>
-	<h1><a title="page header title" id="page-header" href="index.html">Clojure</a></h1>
+	<h1><a title="page header title" id="page-header" href="index.html">Clojure Core API Reference</a></h1>
       </div>
-      <div id="leftcolumn"><div><div style="text-align: center;"></div>
+      <div id="leftcolumn"><div style="text-align: center;"></div>
 <div class="menu">
   <div class="WikiCustomNav WikiElement wiki">
+    <div class="BranchTOC">
+      <a class="wiki_link" href="#">Branches</a>
+      <ul id="left-sidebar-branch-list">
+        <li><a href="index.html" class="wiki_link">pprint</a></li>
+      </ul>
+    </div>
     <a class="wiki_link" href="index.html">Overview</a><br />
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.template-api.html" class="wiki_link">clojure.template</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.walk-api.html" class="wiki_link">clojure.walk</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.pprint-api.html" class="wiki_link">clojure.pprint</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.template-api.html" class="wiki_link">clojure.template</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.walk-api.html" class="wiki_link">clojure.walk</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
-</div></div>
+</div>
       <div id="rightcolumn">
 	<div id="Content">
 	  <div class="contentBox"><div class="innerContentBox">
               <div id="content_view" class="wiki wikiPage">
-                <div id="right-sidebar"><div><div id="toc">
+                <div id="right-sidebar"><div id="toc">
   <h1 class="nopad">Table of Contents</h1>
   <div style="margin-left: 1em;" class="toc-section">
     <a href="#toc0">Overview</a>
@@ -71,16 +77,19 @@ namespace.
     <br />
   </div>
 </div>
-</div></div>
-                <div id="content-tag"><div><h1 id="overview">API for <span id="namespace-name">clojure.set</span></h1>
-by <span id="author">Unknown</span><br />
+</div>
+                <div id="content-tag"><h1 id="overview">API for <span id="namespace-name">clojure.set</span>
+  <span id="branch-name">(pprint branch)</span></h1>
+by <span id="author">Rich Hickey</span><br />
 <br />Usage:
 <pre>
 (ns your-namespace
   (:require <span id="long-name">clojure.set</span>))
 </pre><pre>
 </pre><h2>Overview</h2>
-<pre id="namespace-docstr"></pre>
+<pre id="namespace-docstr">Set operations such as union/intersection.</pre>
+
+
 <br />
 <h2>Public Variables and Functions</h2>
 <div id="var-entry">
@@ -93,7 +102,9 @@ by <span id="author">Unknown</span><br />
        (difference s1 s2 &amp; sets)
 </pre>
   <pre id="var-docstr">Return a set that is the first set without elements of the remaining sets</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L44" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L46" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -103,7 +114,9 @@ by <span id="author">Unknown</span><br />
 </pre>
   <pre id="var-docstr">Returns a map of the distinct values of ks in the xrel mapped to a
 set of the maps in xrel with the corresponding values of ks.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L85" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L88" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -114,7 +127,9 @@ set of the maps in xrel with the corresponding values of ks.</pre>
        (intersection s1 s2 &amp; sets)
 </pre>
   <pre id="var-docstr">Return a set that is the intersection of the input sets</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L29" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L31" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -126,7 +141,9 @@ set of the maps in xrel with the corresponding values of ks.</pre>
   <pre id="var-docstr">When passed 2 rels, returns the rel corresponding to the natural
 join. When passed an additional keymap, joins on the corresponding
 keys.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L99" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L102" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -135,7 +152,9 @@ keys.</pre>
   <pre id="var-usage">Usage: (map-invert m)
 </pre>
   <pre id="var-docstr">Returns the map with the vals mapped to the keys.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L95" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L98" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -144,7 +163,9 @@ keys.</pre>
   <pre id="var-usage">Usage: (project xrel ks)
 </pre>
   <pre id="var-docstr">Returns a rel of the elements of xrel with only the keys in ks</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L65" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L67" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -153,7 +174,9 @@ keys.</pre>
   <pre id="var-usage">Usage: (rename xrel kmap)
 </pre>
   <pre id="var-docstr">Returns a rel of the maps in xrel with the keys in kmap renamed to the vals in kmap</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L80" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L83" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -162,7 +185,9 @@ keys.</pre>
   <pre id="var-usage">Usage: (rename-keys map kmap)
 </pre>
   <pre id="var-docstr">Returns the map with the keys in kmap renamed to the vals in kmap</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L70" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L72" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -171,7 +196,9 @@ keys.</pre>
   <pre id="var-usage">Usage: (select pred xset)
 </pre>
   <pre id="var-docstr">Returns a set of the elements for which pred is true</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L59" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L61" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -183,11 +210,13 @@ keys.</pre>
        (union s1 s2 &amp; sets)
 </pre>
   <pre id="var-docstr">Return a set that is the union of the input sets</pre>
-  <a href="http://github.com/richhickey/clojure/blob/60e805dc7bd42b7b26fc8c8925bf71079729e0e6/src/clj/clojure/set.clj#L17" id="var-source">Source</a>
+  
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/787938361128c2bc21ed896dd4523651b59cb420/src/clj/clojure/set.clj#L19" id="var-source">Source</a>
 </div>
 
 
-</div></div>
+</div>
               </div>
             </div>
           </div>
