--- a/clojure.stacktrace-api.html
+++ b/clojure.stacktrace-api.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>clojure.stacktrace API reference (Clojure)</title>
+    <title>clojure.stacktrace API reference (Clojure (Tom's Fork))</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -25,25 +25,31 @@ namespace.
     <div id="AllContentContainer">
       <div id="Header">
 	<a id="Logo" href="index.html"><img alt="Clojure" height="100" width="100" src="static/clojure-icon.gif" /></a>
-	<h1><a title="page header title" id="page-header" href="index.html">Clojure</a></h1>
+	<h1><a title="page header title" id="page-header" href="index.html">Clojure Core API Reference</a></h1>
       </div>
-      <div id="leftcolumn"><div><div style="text-align: center;"></div>
+      <div id="leftcolumn"><div style="text-align: center;"></div>
 <div class="menu">
   <div class="WikiCustomNav WikiElement wiki">
+    <div class="BranchTOC">
+      <a class="wiki_link" href="#">Branches</a>
+      <ul id="left-sidebar-branch-list">
+        <li><a href="index.html" class="wiki_link">pprint</a></li>
+      </ul>
+    </div>
     <a class="wiki_link" href="index.html">Overview</a><br />
     <a class="wiki_link" href="api-index.html">API Index</a><br />
     <a class="wiki_link" href="#">Namespaces:</a>
     <ul id="left-sidebar-list">
-      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.template-api.html" class="wiki_link">clojure.template</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.walk-api.html" class="wiki_link">clojure.walk</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
+      <li><a href="clojure.core-api.html" class="wiki_link">clojure.core</a></li><li><a href="clojure.inspector-api.html" class="wiki_link">clojure.inspector</a></li><li><a href="clojure.main-api.html" class="wiki_link">clojure.main</a></li><li><a href="clojure.pprint-api.html" class="wiki_link">clojure.pprint</a></li><li><a href="clojure.set-api.html" class="wiki_link">clojure.set</a></li><li><a href="clojure.stacktrace-api.html" class="wiki_link">clojure.stacktrace</a></li><li><a href="clojure.template-api.html" class="wiki_link">clojure.template</a></li><li><a href="clojure.test-api.html" class="wiki_link">clojure.test</a></li><li><a href="clojure.walk-api.html" class="wiki_link">clojure.walk</a></li><li><a href="clojure.xml-api.html" class="wiki_link">clojure.xml</a></li><li><a href="clojure.zip-api.html" class="wiki_link">clojure.zip</a></li>
     </ul>
   </div>
 </div>
-</div></div>
+</div>
       <div id="rightcolumn">
 	<div id="Content">
 	  <div class="contentBox"><div class="innerContentBox">
               <div id="content_view" class="wiki wikiPage">
-                <div id="right-sidebar"><div><div id="toc">
+                <div id="right-sidebar"><div id="toc">
   <h1 class="nopad">Table of Contents</h1>
   <div style="margin-left: 1em;" class="toc-section">
     <a href="#toc0">Overview</a>
@@ -63,8 +69,9 @@ namespace.
     <br />
   </div>
 </div>
-</div></div>
-                <div id="content-tag"><div><h1 id="overview">API for <span id="namespace-name">clojure.stacktrace</span></h1>
+</div>
+                <div id="content-tag"><h1 id="overview">API for <span id="namespace-name">clojure.stacktrace</span>
+  <span id="branch-name">(pprint branch)</span></h1>
 by <span id="author">Stuart Sierra</span><br />
 <br />Usage:
 <pre>
@@ -72,7 +79,9 @@ by <span id="author">Stuart Sierra</span><br />
   (:require <span id="long-name">clojure.stacktrace</span>))
 </pre><pre>
 </pre><h2>Overview</h2>
-<pre id="namespace-docstr">Print Clojure-centric stack traces</pre>
+<pre id="namespace-docstr">Print stack traces oriented towards Clojure, not Java.</pre>
+
+
 <br />
 <h2>Public Variables and Functions</h2>
 <div id="var-entry">
@@ -84,7 +93,9 @@ by <span id="author">Stuart Sierra</span><br />
 </pre>
   <pre id="var-docstr">REPL utility.  Prints a brief stack trace for the root cause of the
 most recent exception.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/169290b08cc731f4182cdcb4e14362d2a6cd3e09/src/clj/clojure/stacktrace.clj#L70" id="var-source">Source</a>
+  <span class="var-added"><span id="content">Added in Clojure (Tom's Fork) version 1.1</span><br /></span>
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/c1c39162608551d50cfb18998d015974b11cfecc/src/clj/clojure/stacktrace.clj#L74" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -94,7 +105,9 @@ most recent exception.</pre>
        (print-cause-trace tr n)
 </pre>
   <pre id="var-docstr">Like print-stack-trace but prints chained exceptions (causes).</pre>
-  <a href="http://github.com/richhickey/clojure/blob/169290b08cc731f4182cdcb4e14362d2a6cd3e09/src/clj/clojure/stacktrace.clj#L61" id="var-source">Source</a>
+  <span class="var-added"><span id="content">Added in Clojure (Tom's Fork) version 1.1</span><br /></span>
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/c1c39162608551d50cfb18998d015974b11cfecc/src/clj/clojure/stacktrace.clj#L64" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -106,7 +119,9 @@ most recent exception.</pre>
   <pre id="var-docstr">Prints a Clojure-oriented stack trace of tr, a Throwable.
 Prints a maximum of n stack frames (default: unlimited).
 Does not print chained exceptions (causes).</pre>
-  <a href="http://github.com/richhickey/clojure/blob/169290b08cc731f4182cdcb4e14362d2a6cd3e09/src/clj/clojure/stacktrace.clj#L42" id="var-source">Source</a>
+  <span class="var-added"><span id="content">Added in Clojure (Tom's Fork) version 1.1</span><br /></span>
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/c1c39162608551d50cfb18998d015974b11cfecc/src/clj/clojure/stacktrace.clj#L44" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -115,7 +130,9 @@ Does not print chained exceptions (causes).</pre>
   <pre id="var-usage">Usage: (print-throwable tr)
 </pre>
   <pre id="var-docstr">Prints the class and message of a Throwable.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/169290b08cc731f4182cdcb4e14362d2a6cd3e09/src/clj/clojure/stacktrace.clj#L37" id="var-source">Source</a>
+  <span class="var-added"><span id="content">Added in Clojure (Tom's Fork) version 1.1</span><br /></span>
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/c1c39162608551d50cfb18998d015974b11cfecc/src/clj/clojure/stacktrace.clj#L38" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -124,7 +141,9 @@ Does not print chained exceptions (causes).</pre>
   <pre id="var-usage">Usage: (print-trace-element e)
 </pre>
   <pre id="var-docstr">Prints a Clojure-oriented view of one element in a stack trace.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/169290b08cc731f4182cdcb4e14362d2a6cd3e09/src/clj/clojure/stacktrace.clj#L26" id="var-source">Source</a>
+  <span class="var-added"><span id="content">Added in Clojure (Tom's Fork) version 1.1</span><br /></span>
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/c1c39162608551d50cfb18998d015974b11cfecc/src/clj/clojure/stacktrace.clj#L26" id="var-source">Source</a>
 </div><div id="var-entry">
   <br />
   <hr />
@@ -133,11 +152,13 @@ Does not print chained exceptions (causes).</pre>
   <pre id="var-usage">Usage: (root-cause tr)
 </pre>
   <pre id="var-docstr">Returns the last 'cause' Throwable in a chain of Throwables.</pre>
-  <a href="http://github.com/richhickey/clojure/blob/169290b08cc731f4182cdcb4e14362d2a6cd3e09/src/clj/clojure/stacktrace.clj#L19" id="var-source">Source</a>
+  <span class="var-added"><span id="content">Added in Clojure (Tom's Fork) version 1.1</span><br /></span>
+  
+  <a href="http://github.com/tomfaulhaber/clojure/blob/c1c39162608551d50cfb18998d015974b11cfecc/src/clj/clojure/stacktrace.clj#L18" id="var-source">Source</a>
 </div>
 
 
-</div></div>
+</div>
               </div>
             </div>
           </div>
